feat: Phase 3 - Polish & Production Readiness
- Add advanced per-endpoint rate limiting with categories
- Create integration tests with Vitest (70% coverage target)
- Add OpenAPI 3.1 documentation for all API endpoints
- Create Docker configuration (Dockerfiles, docker-compose)
- Add environment validation with Zod schema
- Build dashboard UI components (loading, skeleton, empty states)
- Add status badges, cards, and toast notifications
- Update Next.js config for standalone Docker output
- Enhance .env.example with all configuration options

--- a/.env.example
+++ b/.env.example
@@ -4,9 +4,14 @@
 
 # Database
 DATABASE_URL="postgresql://postgres:password@localhost:5432/ninjapay?schema=public"
+# Docker-specific database config
+POSTGRES_USER=ninjapay
+POSTGRES_PASSWORD=your_secure_password_here
+POSTGRES_DB=ninjapay
 
 # Redis
 REDIS_URL="redis://localhost:6379"
+REDIS_PASSWORD=your_redis_password_here
 
 # API Gateway
 API_PORT=8001
@@ -14,6 +19,9 @@ API_HOST=http://localhost:8001
 NODE_ENV=development
 JWT_SECRET=your-jwt-secret-min-32-chars-long
 CORS_ORIGIN=http://localhost:3000
+
+# Webhook signing secret (generate with: openssl rand -hex 32)
+WEBHOOK_SIGNING_SECRET=your-webhook-signing-secret-here
 
 # Arcium MPC Configuration (CLUSTER MODE)
 MPC_MODE=cluster
@@ -33,6 +41,13 @@ SOLANA_RPC_URL=https://api.devnet.solana.com
 SOLANA_NETWORK=devnet
 SOLANA_KEYPAIR_PATH=~/.config/solana/id.json
 
+# USDC Token Mint (devnet)
+USDC_MINT=4zMMC9srt5Ri5X14GAgXhaHii3GnPAEERYPJgZJDncDU
+
+# Fee configuration
+FEE_BASIS_POINTS=50
+FEE_COLLECTOR_ADDRESS=your_fee_collector_wallet_address
+
 # Unified Dashboard
 NEXT_PUBLIC_API_URL=http://localhost:8001
 NEXT_PUBLIC_SOLANA_NETWORK=devnet
@@ -41,3 +56,7 @@ NEXT_PUBLIC_SOLANA_RPC_URL=https://api.devnet.solana.com
 # Rate Limiting
 RATE_LIMIT_WINDOW=60000
 RATE_LIMIT_MAX_REQUESTS=100
+
+# Logging
+LOG_LEVEL=info
+LOG_FORMAT=json
