feat: Add Arcium MPC cluster integration tests
- Create comprehensive test suite for Arcium encryption
- Add ChaCha20-Poly1305 encryption/decryption tests
- Add HKDF key derivation verification
- Add callback signature validation tests
- Add computation request format validation
- Add end-to-end payment flow simulation
- Add security tests (replay attack, tampering detection)
- Create separate vitest config for standalone Arcium tests
- Add test:arcium and test:arcium:live npm scripts

Tests cover:
- Encryption/decryption round-trip
- User-specific key derivation
- Commitment generation and verification
- Callback signature HMAC-SHA256 validation
- Payment and payroll request formatting
- Live cluster connection (when ARCIUM_TEST_MODE=live)

--- a/services/api-gateway/package.json
+++ b/services/api-gateway/package.json
@@ -10,7 +10,10 @@
     "clean": "rm -rf dist",
     "typecheck": "tsc --noEmit",
     "test": "vitest run",
-    "test:watch": "vitest"
+    "test:watch": "vitest",
+    "test:arcium": "vitest run --config vitest.arcium.config.ts",
+    "test:arcium:live": "ARCIUM_TEST_MODE=live vitest run --config vitest.arcium.config.ts",
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@ninjapay/database": "workspace:*",
